--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,6 @@
 [paths]
-wishlist = /Users/Joe/wanted.txt
-save_directory = /Users/Joe/streamate
+wishlist = /root/sm/wanted.txt
+save_directory = /root/b/d/MFC/sweetxmelody
 
 [settings]
 checkInterval = 20
