--- a/config.conf
+++ b/config.conf
@@ -1,6 +1,6 @@
 [paths]
 wishlist = /root/sm/wanted.txt
-save_directory = /root/b/d/MFC/sweetxmelody
+save_directory = /root/b/d/MFC
 
 [settings]
 checkInterval = 20
